<resources>
    <string name="app_name">ImageTransition</string>
    <string name="title_second_activity">Second Activity</string>
    <string name="blue_name">blue</string>
    <string name="desc_rate_this_app">Rate this app</string>
    <string name="desc_github_link">Github link</string>
    <string name="desc_about_this_app">About this app</string>
    <string name="title_about_this_app_activity">About this app</string>
    <string name="about_this_app_activity_content_intro">Image Transition library uses the following open source components:</string>
    <string name="about_lib_title_circleimageview">Henning Dodenhof\'s CircleImageView</string>
    <string name="about_lib_link_circleimageview">https://github.com/hdodenhof/CircleImageView</string>
    <string name="about_lib_title_picasso">Picasso</string>
    <string name="about_lib_link_picasso">http://square.github.io/picasso/</string>
    <string name="label_first_activity">FIRST ACTIVITY</string>
    <string name="label_second_activity">SECOND ACTIVITY</string>
    <string name="label_instructions">Hold &amp; drag to move the image around\nClick to see the transition</string>
</resources>
